# DailyResearchFeeder

./: .env.example  .gitignore  LICENSE  MANIFEST.in  README.md  config.example.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: daily-digest.yml  package-release.yml
dailyresearchfeeder/: __init__.py  __main__.py  cli.py  config.py  emailer.py  llm.py  models.py  orchestrator.py  pipeline.py  renderer.py  state.py
dailyresearchfeeder/sources/: __init__.py  arxiv.py  base.py  feeds.py  hf_daily.py  internet_insights.py
dailyresearchfeeder/templates/: .env.example  __init__.py
dailyresearchfeeder/templates/user/: arxiv_categories.txt  exclude_keywords.txt  feeds.yaml  keywords.txt  research_interests.txt
scripts/: bootstrap.sh  daily_digest_daemon.sh  run_daily_digest_now.sh  start_daily_digest_daemon.sh  stop_daily_digest_daemon.sh
tests/: test_cli.py  test_config.py  test_internet_insights.py  test_llm.py  test_orchestrator.py  test_pipeline.py
user/: arxiv_categories.txt  exclude_keywords.txt  feeds.yaml  keywords.txt  research_interests.txt
